[package]
name = "biblia-discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.64"
serde = { version = "1.0.96", features = ["derive"] }
tokio = { version = "1.0.0", features = ["full"] }
strsim = "0.10.0"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "chrono",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
]
version = "0.12"
